<resources>
    <string name="app_name">Bon Appeteat</string>

    <!-- APP -->
    <string name="food_name">Food Name</string>
    <string name="food_description">Food Description</string>
    <string name="food_price">Rp.25,000.00</string>
    <string name="rating">Rating</string>
    <string name="order">Pesan</string>
    <string name="subtract">-</string>
    <string name="quantity">Qty:</string>
    <string name="total">Total:</string>
    <string name="my_email">rigelvibi51@gmail.com</string>
    <string name="my_name">Rigel Vibi Ramadhan</string>
    <string name="about">About</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="share">Share</string>
    <string name="favorite">Favorite</string>
    <string name="qty_default">0</string>
    <string name="profile">profile</string>
    <string name="cart">Cart</string>
    <string name="number">1</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="zero">0</string>
    <string name="points">150 Points</string>
    <string name="my_coupons">My Coupons</string>
    <string name="coupons">Coupons</string>
    <string name="password_hint">********</string>
    <string name="password">Password</string>
    <string name="email_hint">example@email.com</string>
    <string name="email">Email</string>
    <string name="login">login</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="create_new_account_click_here">Create new account? Click here!</string>
    <string name="register">register</string>
    <string name="register_cap">Register</string>
    <string name="email_taken_message">Email has been taken.</string>
    <string name="phone_number_hint">Enter your number</string>
    <string name="name_hint">John John</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="foods_list">Foods List</string>
    <string name="foods">Foods</string>
    <string name="see_all">See All</string>
    <string name="detail">Detail</string>
    <string name="history">History</string>
    <string name="drinks">Drinks</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="coupons_description">Diskon 40% (min. pembelian Rp50...</string>
    <string name="date">21 Oktober 2020</string>
    <string name="main_menu_date">Jun 14, 2021</string>
    <string name="closed">Closed</string>
    <string name="open">Open</string>
    <string name="categories">Categories</string>
    <string name="coupons_button_text">Get discount up to 50%, see all here.</string>
    <string name="all">All</string>
    <string name="recommended">Recommended</string>

    <!-- MAP BOX -->
    <string name="mapbox_access_token">pk.eyJ1IjoicmlnZWxyYW1hZGhhbiIsImEiOiJja3B3ZGJrN2owOW90MnVtZmxjOGlnYjluIn0.oi599m6e34iTJNC_tV7Ysg</string>
    <string name="user_location_permission_explanation">This app needs location permissions in order to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <string name="order_successful">Your order has been placed. Please wait for the food to come.</string>
    <string name="card_null">You have no food in your card right now. You can order in the menus.</string>
    <string name="food_management">Food Management</string>
    <string name="waiting_orders">Waiting Orders</string>
    <string name="finished_orders">Finished Orders</string>
    <string name="waiting">Waiting</string>
    <string name="delivered">Delivered</string>
    <string name="save">Save</string>

</resources>