<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AdminMenuActivity">

    <TextView
        android:id="@+id/tvClock"
        style="@style/PrimaryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginStart="8dp"
        android:text="@string/main_menu_date"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="@+id/layoutTop"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvOpen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvClock"
        app:layout_constraintEnd_toEndOf="@+id/layoutTop"
        app:layout_constraintTop_toTopOf="@+id/tvClock">

        <TextView
            android:id="@+id/tvOpen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/open"
            android:textAllCaps="true"
            android:textColor="@color/blue_main"
            android:textSize="18sp" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/layoutTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvClock"
        android:layout_marginTop="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp">

        <Button
            android:id="@+id/btnFoodManagement"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rectangle_buttonaddtocart"
            app:backgroundTint="@color/secondcolor"
            android:drawableTop="@drawable/ic_dashicons_food"
            android:paddingTop="15dp"
            android:text="@string/food_management"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:elevation="5dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="100dp"/>

        <Button
            android:id="@+id/btnWaitingOrders"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/rectangle_buttonaddtocart"
            app:backgroundTint="@color/secondcolor"
            android:drawableTop="@drawable/ic_history"
            android:paddingTop="15dp"
            android:layout_marginBottom="8dp"
            android:text="@string/waiting_orders"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:elevation="5dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="100dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutBottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/layoutTop"
        app:layout_constraintStart_toStartOf="@+id/layoutTop"
        app:layout_constraintTop_toBottomOf="@+id/layoutTop">

        <Button
            android:id="@+id/btnFinishedOrders"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rectangle_buttonaddtocart"
            android:drawableTop="@drawable/ic_ion_restaurant"
            android:elevation="5dp"
            android:paddingTop="15dp"
            android:text="@string/finished_orders"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:backgroundTint="@color/secondcolor" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rectangle_buttonaddtocart"
            android:drawableTop="@drawable/ic_akar_icons_arrow_back"
            android:elevation="5dp"
            android:paddingTop="15dp"
            android:text="@string/logout"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:backgroundTint="@color/secondcolor" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>