<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/maincolor"
        android:layout_marginBottom="5dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/food_detail_number"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_rectangle_white_background">

                <TextView
                    android:id="@+id/tvAngka_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/number"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </RelativeLayout>

            <ImageView
                android:id="@+id/imgDetailFood_History"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/food_detail_number"
                android:src="@drawable/breakfast" />

            <TextView
                android:id="@+id/tvDetailName_History"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_toRightOf="@id/imgDetailFood_History"
                android:maxLines="1"
                android:text="@string/food_name"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvDetailDeskripsi_History"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvDetailName_History"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/imgDetailFood_History"
                android:ellipsize="end"
                android:justificationMode="inter_word"
                android:maxLines="2"
                android:text="@string/food_description" />

            <TextView
                android:id="@+id/tvDetailHarga_History"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvDetailDeskripsi_History"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_toRightOf="@id/imgDetailFood_History"
                android:text="@string/food_price"
                android:textColor="@color/black" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>