<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/maincolor">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/secondcolor"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvStatus"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:cardCornerRadius="999dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="14dp">

                <TextView
                    android:id="@+id/tvStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/waiting" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_date_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="10dp"
                android:layout_toEndOf="@+id/cvStatus"
                android:maxLines="1"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/tvDeskripsi_History"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_date_history"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@id/cvStatus"
                android:ellipsize="end"
                android:justificationMode="inter_word"
                android:maxLines="1"
                android:text="@string/food_description" />

            <TextView
                android:id="@+id/tv_harga_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvDeskripsi_History"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:layout_toEndOf="@+id/cvStatus"
                android:text="@string/food_price"
                android:textSize="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>